@@ -138,7 +138,6 @@ PKG_CHECK_MODULES(TWITUX,
 	gtk+-2.0 >= $GTK_REQUIRED
 	libglade-2.0 >= $LIBGLADE_REQUIRED
 	glib-2.0 >= $GLIB_REQUIRED
-	libgnomeui-2.0 >= $LIBGNOME_REQUIRED
 	gio-2.0 >= $LIBGIO_REQUIRED
 	libsoup-2.4
 	libnotify
